--- a/.github/workflows/contoso-traders-app-deployment.yml
+++ b/.github/workflows/contoso-traders-app-deployment.yml
@@ -2,6 +2,9 @@ name: contoso-traders-app-deployment
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 env:
   ACR_NAME: contosotradersacr
