--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,6 +39,8 @@ jobs:
       actions: read
       contents: read
 
+      pull-requests: write
+
     strategy:
       fail-fast: false
       matrix:
